--- a/aula/package.json
+++ b/aula/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "type": "module",
   "devDependencies": {
+    "@prisma/client": "^6.4.1",
     "@types/config": "^3.3.5",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.2",
+    "prisma": "^6.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
