--- a/aula/package.json
+++ b/aula/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "config": "^3.3.12",
     "cors": "^2.8.5",
