--- a/poke/tsconfig.app.json
+++ b/poke/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "../pokeApiProject/src/routes"]
 }
